<?xml version="1.0" encoding="utf-8"?>
<resources>

   
    <string name="forgetPwd"><u>Forget Password?</u></string>
    <string name="app_name">IFIS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login"><b>Login</b></string>
    <string name="desc">ifis</string>
    <string name="changePassword"><u>Change Password?</u></string>
    <string name="stock">Stock</string>
    <string name="accountNo">Account No.</string>
    <string name="name">Name</string>
    <string name="bid">Bid</string>
    <string name="ask">Ask</string>
    <string name="last">Last</string>
    <string name="lostSize">Lot Size</string>
    <string name="change">Change</string>
    <string name="action">Action</string>
    <string name="orderPrice">Order Price</string>
    <string name="qty">Quantity</string>
    <string name="paymentType">Payment Type</string>
    <string name="currency">Currency</string>
    <string name="destinaction">Route Destination</string>
    <string name="title_activity_order_entry"><b>OrderEntryActivity</b></string>
    <string name="title_activity_order_confirm">OrderConfirmActivity</string>
    <string name="confirmOrder"><b>Order Confirmation</b></string>
    <string name="clientAcc">Client Account :</string>
    <string name="stockCode">Stock Code :</string>
    <string name="stockName">Stock Name :</string>
    <string name="price">Price :</string>
    <string name="qtyy">Quantity :</string>
    <string name="tlAmount">Total Amount($) :</string>
    <string name="setCurrency">Settlement Currency :</string>
    <string name="odrType">Order Type :</string>
    <string name="routeDes">Route Dest :</string>
    <string name="enterPass">Enter Password</string>
    <string name="title_activity_home_tabs">HomeTabsActivity</string>
    <string name="title_activity_order_book">OrderBookActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="action_logout">Logout</string>
    <string name="exchange">Exchange</string>
    <string name="title_activity_order_details">OrderDetailsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="server_registering">server is registering</string>
	<string name="server_registered">server registered</string>
	<string name="server_register_error">server is registering err</string>
	<string name="server_unregistered">server un reg</string>
	<string name="server_unregister_error">server un reg err</string>
	<string name="success">success</string>
	<string name="fail">fail</string>
	<string name="gcm_error">gcm fail</string>
	<string name="gcm_recoverable_error">fail</string>
	<string name="gcm_deleted">fail</string>
	
	
    
</resources>
